fix(MS Review): Inline HTML

--- a/Lectures/MS_Review_Notes/B4P2.md
+++ b/Lectures/MS_Review_Notes/B4P2.md
@@ -2,7 +2,7 @@
 
 > **_Inter Integrated Circuit_**，译为集成电路总线，简写为 IIC，也常写作 I2C。
 
-<img src="B4P2.assets/image-20240601011417481.png" alt="image-20240601011417481" style="zoom: 67%;" />
+<img src="./B4P2.assets/image-20240601011417481.png" alt="image-20240601011417481" style="zoom: 67%;" />
 
 ## <u>简介</u>
 
@@ -33,7 +33,7 @@
 
 ## <u>典型的 I2C 连接</u>
 
-<img src="B4P2.assets/image-20240601014019835.png" alt="image-20240601014019835" style="zoom: 67%;" />
+<img src="./B4P2.assets/image-20240601014019835.png" alt="image-20240601014019835" style="zoom: 67%;" />
 
 典型的 I2C 连接由 SDA 和 SCL 两个线组成。
 
@@ -57,7 +57,7 @@ SCL，即为 I2C 总线的时钟线，默认为高电平状态。在传输过程
 
 这是一个多主机连接多从机的 I2C 连接结构，是更常用的用法。
 
-<img src="B4P2.assets/image-20240602021731492.png" alt="image-20240602021731492"  />
+<img src="./B4P2.assets/image-20240602021731492.png" alt="image-20240602021731492"  />
 
 这种连接方式存在一个问题：当多个挂载在同一总线上的设备同时进行数据传输时，数据会相互覆盖干扰，最后不能得到正确的通讯效果。
 
@@ -69,7 +69,7 @@ SCL，即为 I2C 总线的时钟线，默认为高电平状态。在传输过程
 
 ### 消息的开始与结束
 
-<img src="B4P2.assets/image-20240602005512028.png" alt="image-20240602005512028" style="zoom: 67%;" />
+<img src="./B4P2.assets/image-20240602005512028.png" alt="image-20240602005512028" style="zoom: 67%;" />
 
 - **开始条件：**在 SCL 处于高电平时，SDA 线发生了从高电平到低电平的转换过程，也就是有下降沿。
 - **结束条件：**在 SCL 处于高电平时，SDA 线发生了从低电平到高电平的转换过程，也就是有上升沿。
@@ -89,7 +89,7 @@ SCL，即为 I2C 总线的时钟线，默认为高电平状态。在传输过程
 
 - **读/写位：**这一位紧接着地址帧发出，其中高电平状态含义为要求从从机读取数据，低电平状态的含义为将要给从机发送数据。这一位会影响之后的数据帧的发送方和发送格式。
 
-<img src="B4P2.assets/image-20240602015432401.png" alt="image-20240602015432401" style="zoom:67%;" />
+<img src="./B4P2.assets/image-20240602015432401.png" alt="image-20240602015432401" style="zoom:67%;" />
 
 - **数据帧：**长度为 8 位，也就是以字节为单位进行收发，顺序是 HSB 到 LSB，或者说是大端模式。具体怎么传输数据，传输什么数据，由谁给谁怎么传输，根据从设备的数据手册里的定义来判断。
   不过值得注意的是，I2C 是一个半双工的通讯协议，SDA 线在同一时间只能由一个设备进行信息的发送，而在发送的同时 SCL 线必须由主机提供时钟信号。
