--- a/Lectures/MS_Review_Notes/B4P4.md
+++ b/Lectures/MS_Review_Notes/B4P4.md
@@ -76,9 +76,9 @@
 
 ### Mbed OS 6 上 GPIO 中断的 API
 
-<img src="B4P4.assets/image-20240614003454060.png" alt="image-20240614003454060" style="zoom:25%;" />
+<img src="./B4P4.assets/image-20240614003454060.png" alt="image-20240614003454060" style="zoom:25%;" />
 
-<img src="B4P4.assets/image-20240614003508331.png" alt="image-20240614003508331" style="zoom: 25%;" />
+<img src="./B4P4.assets/image-20240614003508331.png" alt="image-20240614003508331" style="zoom: 25%;" />
 
 ## <u>计时器(Timers/TIM)</u>
 
@@ -90,7 +90,7 @@
 
 一般认为寄存器存储的是无符号整型数据，长度由寄存器位数决定。比如对一个 8 位的寄存器，最大的值就是 0xFF，数据溢出就会变成 0x00
 
-<img src="B4P4.assets/image-20240614004035513.png" alt="image-20240614004035513" style="zoom:25%;" />
+<img src="./B4P4.assets/image-20240614004035513.png" alt="image-20240614004035513" style="zoom:25%;" />
 
 上图是个使用 TIM 的例子，其中的 TIM 采用上升沿计数的方式，外部时钟是 5kHz，想要获得 5s 的计时则需要计数 25000 次计数。
 
